[package]
name = "count-zeroes"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Count zeroes on a disk or a file"
repository = "https://github.com/cecton/count-zeroes"
homepage = "https://github.com/cecton/count-zeroes"
documentation = "https://docs.rs/count-zeroes"
readme = "README.md"
keywords = ["partition", "filesystem", "disk", "zero", "trim", "check"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
