[package]
name = "count-zeroes"
version = "0.2.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Count zeroes on a disk or a file"
repository = "https://github.com/cecton/count-zeroes"
homepage = "https://github.com/cecton/count-zeroes"
documentation = "https://docs.rs/count-zeroes"
readme = "README.md"
keywords = ["filesystem", "disk", "zero", "trim", "check"]
categories = ["command-line-utilities"]
